--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
     "start": "nodemon server",
-    "test": " mocha ./server --recursive && jest --testPathPattern ./__test__\/*.js",
+    "test": " mocha ./server --recursive",
     "build": "webpack --watch"
   },
   "author": "Hack Reactor",
