--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
     "start": "nodemon server",
     "test": " mocha ./server --recursive && jest --testPathPattern ./__test__\/*.js",
-    "build": "webpack --watch"
+    "build": "webpack --watch",
+    "migrate": "knex migrate:latest"
   },
   "author": "Hack Reactor",
   "license": "MIT",
