--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 - 'npm install -g grunt-cli'
 
 before_script:
- - psql -c 'create database thesis;' -U postgres
+ - psql -c 'create database thesis_test;' -U postgres
 
 script:
   - "npm test"
