--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "migrate": "knex migrate:latest",
     "test": "mocha ./server --recursive && mocha ./db --recursive && jest --testPathPattern ./__test__/",
     "test-server": "mocha ./server --recursive",
+    "test-db": "NODE_ENV=test mocha ./db --recursive",
     "test-frontend": "jest --testPathPattern ./__test__/",
     "build": "webpack --watch"
   },
