--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "knex": "^0.12.9",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
+    "nodemailer": "^4.1.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
