--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "pg": "^6.1.5",
     "react": "^15.4.2",
     "react-router-dom": "^4.2.2",
-    "redis": "^2.7.1"
+    "redis": "^2.7.1",
+    "styled-components": "^2.1.2"
   },
   "devDependencies": {
     "babel-jest": "^21.0.0",
