--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "grunt": "~0.4.5",
     "grunt-eslint": "^19.0.0",
     "grunt-mocha-test": "^0.13.2",
-    "jest": "^20.0.4",
+    "jest": "^21.0.2",
+    "jest-cli": "^21.0.2",
     "mocha": "^3.2.0",
     "node-mocks-http": "^1.6.1",
     "react-addons-test-utils": "^15.6.0",
