--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-session": "^1.15.1",
     "grunt-pg": "https://github.com/watsoncj/grunt-pg.git",
     "knex": "^0.12.9",
+    "moment": "^2.18.1",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "nodemailer": "^4.1.0",
