--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "redis": "^2.7.1",
     "s3-upload-stream": "^1.0.7",
     "shallowequal": "^1.0.2",
-    "styled-components": "^2.1.2",
-    "zlib": "^1.0.5"
+    "styled-components": "^2.1.2"
   },
   "devDependencies": {
     "babel-jest": "^21.0.0",
